<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dynamicbackground1"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/new_meal_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/new_meal_message"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="172dp"
        android:layout_height="128dp"
        android:contentDescription="@string/breakfast_tab"
        android:src="@drawable/baguette" />

    <TextView
        android:id="@+id/suggestion_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/suggestion_message"
        android:textColor="@color/black"
        android:textSize="27dp" />

</LinearLayout>