<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/meal_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/picture_meal"
        />
    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:scaleType="centerCrop"
        android:src="@drawable/baguette" />
    <Button
        android:id="@+id/photo_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/photo" />
    <Button
        android:id="@+id/instruction_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/instruction_button" />
</LinearLayout>