<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:theme="@style/Theme.AppCompat"
tools:context=".MealDetailsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/meal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/black"
        android:text="@string/meal_details"
         />
    <TextView
        android:id="@+id/favorites_text_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:paddingTop="16dp"
        android:text="@string/first_time_meal_detail_instructions"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        android:textStyle="italic"
        android:textSize="20dp"
/>
    <Button
        android:id="@+id/instruction_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction_button"
        android:padding="1dp" />

</LinearLayout>
</ScrollView>
