<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="60dp">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="@string/plan_instruction"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_breakfast"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/coffee"
        android:text=""
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/button_lunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <Button
        android:id="@+id/button_lunch"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/lunch"
        android:text=""
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/button_dinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_breakfast" />

    <Button
        android:id="@+id/button_dinner"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/dinner"
        android:text=""
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_lunch" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/breakfast_button"
        app:layout_constraintTop_toBottomOf="@+id/button_breakfast"
        app:layout_constraintStart_toStartOf="@id/button_breakfast"
        app:layout_constraintEnd_toEndOf="@id/button_breakfast"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch_button"
        app:layout_constraintTop_toBottomOf="@+id/button_lunch"
        app:layout_constraintStart_toStartOf="@id/button_lunch"
        app:layout_constraintEnd_toEndOf="@id/button_lunch"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner_button"
        app:layout_constraintTop_toBottomOf="@+id/button_dinner"
        app:layout_constraintStart_toStartOf="@id/button_dinner"
        app:layout_constraintEnd_toEndOf="@id/button_dinner"/>


</androidx.constraintlayout.widget.ConstraintLayout>
