<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="60dp">

    <TextView
        android:id="@+id/text_dinner_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/meal_instruction"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="184dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_pho"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/bowl_mix"
                android:text=""
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner_pho"
                android:textColor="@color/grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/button_chicken"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/food_drumstick"
                android:text=""
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner_chicken"
                android:textColor="@color/grey" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
